--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="class-text" 1 - I'm a class!</p>
-    <div id="id-text" 2 - I'm one ID.</div>
-    <p class="class-text" 3 - I'm a class, but cooler!</p>
-    <div id="id-text" 4 - I'm another ID.</div>
-    <p class="class-text" 5 - I'm a class!</p>
+    <p class="class-text">1 - I'm a class!</p>
+    <div id="blue-text">2 - I'm one ID.</div>
+    <p class="class-text">3 - I'm a class, but cooler!</p>
+    <div id="green-text">4 - I'm another ID.</div>
+    <p class="class-text">5 - I'm a class!</p>
   </body>
 </html>
