Add rules to style.css and fix attributes for <p> and <div> elements in index.html

--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="class-text">1 - I'm a class!</p>
     <div id="blue-text">2 - I'm one ID.</div>
-    <p class="class-text">3 - I'm a class, but cooler!</p>
+    <p class="class-text" id="cool">3 - I'm a class, but cooler!</p>
     <div id="green-text">4 - I'm another ID.</div>
     <p class="class-text">5 - I'm a class!</p>
   </body>
