--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -12,15 +12,15 @@
       <div class="logo">
         LOGO
       </div>
-      <ul class="links">
-        <li><a href="google.com">link-one</a></li>
-        <li><a href="google.com">link-two</a></li>
-        <li><a href="google.com">link-three</a></li>
+      <ul class="left-links">
+        <li class="one"><a href="google.com">link-one</a></li>
+        <li class="two"><a href="google.com">link-two</a></li>
+        <li class="three"><a href="google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
+      <button class="right-notif">
         1 new notification
       </button>
-      <div class="profile-image"></div>
+      <div class="right-prof"></div>
     </div>
   </body>
 </html>
